--- a/package.json
+++ b/package.json
@@ -27,17 +27,24 @@
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "deep-equal": "^1.0.1",
     "express": "^4.13.4",
     "html-webpack-plugin": "^2.9.0",
+    "invariant": "^2.2.1",
+    "mousetrap": "^1.5.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
+    "react-side-effect-mousetrap": "thr1ve/react-side-effect-mousetrap",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.2",
+    "spectacle": "^1.0.5",
+    "spectacle-code-slide": "^0.1.8",
     "style-loader": "^0.13.0",
+    "warning": "^2.1.0",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.10.0"
