--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "bulma": "0.0.24",
     "deep-equal": "^1.0.1",
     "express": "^4.13.4",
     "html-webpack-plugin": "^2.9.0",
