--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prod": "NODE_ENV=production node build/index.js",
     "start": "npm run clean && npm run build && npm run prod",
     "dev": "node server/index.babel.js",
-    "deploy:static": "npm run clean:client && GH_PAGES=true npm run build:client && gh-pages -d dist"
+    "deploy:static": "npm run clean:client && GH_PAGES=true npm run build:client && gh-pages -d dist",
+    "storybook": "start-storybook -p 9001"
   },
   "keywords": [],
   "author": "Thr1ve",
@@ -28,13 +29,17 @@
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "brace": "^0.8.0",
     "bulma": "0.0.24",
+    "css-loader": "^0.23.1",
     "deep-equal": "^1.0.1",
     "express": "^4.13.4",
     "html-webpack-plugin": "^2.9.0",
     "invariant": "^2.2.1",
     "mousetrap": "^1.5.3",
     "react": "^0.14.7",
+    "react-ace": "^3.4.0",
+    "react-codemirror": "^0.2.6",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
@@ -45,13 +50,14 @@
     "rimraf": "^2.5.2",
     "spectacle": "^1.0.5",
     "spectacle-code-slide": "^0.1.8",
-    "style-loader": "^0.13.0",
+    "style-loader": "^0.13.1",
     "warning": "^2.1.0",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.10.0"
   },
   "devDependencies": {
+    "@kadira/storybook": "^1.18.0",
     "babel-eslint": "^6.0.2",
     "css-loader": "^0.23.1",
     "eslint": "^2.7.0",
