--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.13.4",
     "html-webpack-plugin": "^2.9.0",
     "invariant": "^2.2.1",
+    "moment": "^2.13.0",
     "mousetrap": "^1.5.3",
     "react": "^0.14.7",
     "react-ace": "^3.4.0",
