--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "clean": "npm run clean:server && npm run clean:client",
     "build:server": "babel server -d build",
     "build:client": "NODE_ENV=production webpack --config ./webpack.production.config.js",
+    "build:static": "NODE_ENV=ghpages webpack --config ./webpack.static.config.js",
     "build": "npm run build:server && npm run build:client",
     "prod": "NODE_ENV=production node build/index.js",
     "start": "npm run clean && npm run build && npm run prod",
     "dev": "node server/index.babel.js",
-    "deploy:static": "npm run clean:client && GH_PAGES=true npm run build:client && gh-pages -d dist",
+    "deploy:static": "npm run clean:client && npm run build:static && gh-pages -d static",
     "storybook": "start-storybook -p 9001"
   },
   "keywords": [],
@@ -64,9 +65,11 @@
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.3.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.11.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^0.14.7",
+    "react-to-html-webpack-plugin": "^2.2.0",
     "redbox-react": "^1.2.2",
     "redux-logger": "^2.6.1",
     "static-site-generator-webpack-plugin": "^2.0.1"
