--- a/package.json
+++ b/package.json
@@ -61,12 +61,14 @@
   "devDependencies": {
     "@kadira/storybook": "^1.18.0",
     "babel-eslint": "^6.0.2",
+    "chalk": "^1.1.3",
     "css-loader": "^0.23.1",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.11.0",
+    "progress-bar-webpack-plugin": "^1.8.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^0.14.7",
     "react-to-html-webpack-plugin": "^2.2.0",
