--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "invariant": "^2.2.1",
     "moment": "^2.13.0",
     "mousetrap": "^1.5.3",
-    "react": "^0.14.7",
+    "react": "^15.0.2",
     "react-ace": "^3.4.0",
+    "react-addons-test-utils": "^0.14.8",
     "react-codemirror": "^0.2.6",
-    "react-dom": "^0.14.7",
+    "react-dom": "^15.0.2",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-side-effect-mousetrap": "thr1ve/react-side-effect-mousetrap",
@@ -64,8 +65,10 @@
     "chalk": "^1.1.3",
     "css-loader": "^0.23.1",
     "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-react": "^4.3.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.1",
+    "eslint-plugin-react": "^5.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.11.0",
     "progress-bar-webpack-plugin": "^1.8.0",
