--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "eslint-plugin-react": "^5.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.11.0",
+    "postcss-loader": "^0.9.1",
+    "postcss-modules-values": "^1.1.3",
     "progress-bar-webpack-plugin": "^1.8.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^0.14.7",
