--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Thr1ve",
   "license": "MIT",
   "dependencies": {
+    "@thr1ve/utils": "^1.3.0",
     "axios": "^0.9.1",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.0",
